# zed-d

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  extension.json  extension.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
grammars/: d.toml
languages/d/: highlights.scm  outline.scm
src/: lib.rs
